--- a/src/style.css
+++ b/src/style.css
@@ -25,13 +25,14 @@ a:hover {
 
 body {
   min-width: 320px;
+  max-width: 1280px;
   width: 100vw;
   min-height: 100vh;
   height: 100vh;
 
   display: flex;
   flex-direction: column;
-  margin: 0;
+  margin: auto;
 }
 
 h1 {
@@ -46,8 +47,8 @@ h1 {
   width: 100%;
   padding: 2rem;
 
-  text-align: center;
-  margin: 0 auto;
+  /* text-align: center;
+  margin: 0 auto; */
 }
 
 .logo {
@@ -108,7 +109,6 @@ button:focus-visible {
   width: 100%;
 }
 
-.home__wrapper {
-  display: flex;
-  justify-content: space-between;
+footer {
+  margin: 0 auto;
 }
