--- a/src/style.css
+++ b/src/style.css
@@ -22,6 +22,12 @@ a {
 a:hover {
   color: #535bf2;
 }
+.cancelBtn {
+  background-color: #de5360bf;
+}
+.saveBtn {
+  background-color: #00f53942;
+}
 
 body {
   min-width: 320px;
@@ -46,9 +52,6 @@ h1 {
   max-width: 1280px;
   width: 100%;
   padding: 2rem;
-
-  /* text-align: center;
-  margin: 0 auto; */
 }
 
 .logo {
